--- a/new portfolio/main/gallery.css
+++ b/new portfolio/main/gallery.css
@@ -69,3 +69,17 @@ button{
 button:hover{
     background-color: rgb(35, 65, 120);
 }
+
+#scrollButton {
+    background-color: #007BFF; /* Bootstrap Primary Color */
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#scrollButton:hover {
+    background-color: #0056b3; /* Darker shade on hover */
+}
